fix(VsModalView): apply z-index value (#325)

--- a/packages/vlossom/src/styles/base.scss
+++ b/packages/vlossom/src/styles/base.scss
@@ -15,24 +15,12 @@ body {
 html,
 body {
     position: relative;
-    width: 100%;
+    min-width: 100%;
     min-height: 100vh;
     line-height: 1.5;
     font-weight: 400;
-    font-family:
-        'Noto Sans',
-        'Nanum Gothic',
-        -apple-system,
-        BlinkMacSystemFont,
-        system-ui,
-        'Helvetica Neue',
-        'Segoe UI',
-        'Apple SD Gothic Neo',
-        'Noto Sans KR',
-        'Malgun Gothic',
-        'Apple Color Emoji',
-        'Segoe UI Emoji',
-        'Segoe UI Symbol',
+    font-family: 'Noto Sans', 'Nanum Gothic', -apple-system, BlinkMacSystemFont, system-ui, 'Helvetica Neue', 'Segoe UI',
+        'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
         sans-serif;
     font-weight: 400;
     background-color: var(--vs-app-background-color);
@@ -45,16 +33,16 @@ body {
 // vlossom scrollbar
 ::-webkit- {
     &scrollbar {
-        width: 0.4rem;
+        width: 0.6rem;
     }
 
     &scrollbar:horizontal {
-        height: 0.4rem;
+        height: 0.6rem;
     }
 
     &scrollbar-thumb {
         border-radius: 8px;
-        background-color: rgba(#b9b9b9, 0.6);
+        background-color: rgba(#7a7a7a, 0.6);
         &:hover {
             background-color: rgba(#a1a1a1, 1);
         }
