--- a/packages/vlossom/src/styles/variables.scss
+++ b/packages/vlossom/src/styles/variables.scss
@@ -31,7 +31,6 @@ $variables: (
     modal-width-xl: 90%,
 
     // z-index
-    bar-z-index: 100,
     app-bar-z-index: 1000,
     modal-z-index: 5000,
     toast-z-index: 9999,
